<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_tasks"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_tasks" />
    <item
        android:id="@+id/nav_meals"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_meals" />
    <item
        android:id="@+id/nav_water"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/nav_water" />
    <item
        android:id="@+id/nav_habits"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_habits" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_profile" />
</menu>
